[package]
name = "wstunnel"
version = "0.1.0"
authors = ["losfair <zhy20000919@hotmail.com>"]
edition = "2018"
description = "Tunneling IP over WebSocket."
license = "MIT"
repository = "https://github.com/losfair/wstunnel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.11", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.6"
tokio-tungstenite = "0.10.1"
jsonwebtoken = "7.0.1"
structopt = "0.3.9"
slab = "0.4.2"
etherparse = "0.9.0"
tun = { git = "https://github.com/meh/rust-tun", rev = "56ef20c3406301807c2964e112ceb06d7b04d0ca", features = ["async"] }
futures = "0.3.4"
serde_json = "1.0.48"
chrono = "0.4.10"
anyhow = "1.0"
thiserror = "1.0"
